# hop-cpu

./: .gitignore  README.md  build.sbt
doc/: README.md  lesson-story.md
sim/: toO3PipeView.py
sim/verilator/: CMakeLists.txt  README.md
sim/verilator/rtl/: bridge_1x2.v  confreg.v
sim/verilator/rtl/soc/: soc_sram_top.v
sim/verilator/rtl/sram/: data_ram.v  inst_ram.v  sram.v
sim/verilator/stub/: func_test_sim.cpp
sim/verilator/tb/: func_test_sram_tb.v
sim/vivado/: README.md  behav_sim.tcl  common.tcl  fast_test.sh  impl.tcl  synth.tcl
sim/vivado/common/: import_files.tcl  procs.tcl
src/main/scala/: BranchUnit.scala  Core.scala  CoreParameter.scala  FixedMemMap.scala  IDispatchIssue.scala  IFetch.scala  Instructions.scala  JumpAhead.scala  LongIntExec.scala  MircoInstuction.scala  RegRead.scala  WriteBackDebugger.scala  mycpu_top.scala
src/main/scala/alu/: Adder.scala
src/main/scala/axi/: AXI4MM.scala
src/main/scala/cp0/: CP0.scala  CP0FrontEnd.scala  CP0OperationBundle.scala  CP0Regfiles.scala  CP0RegfilesRegRWBundle.scala  CP0ResultBundle.scala  ExceptionBundle.scala  IntArbiter.scala
src/main/scala/decode/: Decoder.scala  IDecode.scala
src/main/scala/dispatch/: IDispatch.scala
src/main/scala/issue/: IIssue.scala
src/main/scala/lsu/: AddressGeneration.scala  LoadStoreUnit.scala  LoadStoreUnitOpreationBundle.scala  LoadStoreUnitResultBundle.scala  LoadUnit.scala  MemLoadBundle.scala  MemoryStoreBundle.scala  SramCtrl.scala  StoreBuf.scala  StoreBufQueryBundle.scala  StoreBufferEntry.scala
src/main/scala/rename/: CommitPhyRegBundle.scala  (+4 more)
(+21 files in other folders)
